Closed Bug 386980 Opened 17 years ago Closed 17 years ago

mdn responses are sent without the configured personal name for the account

Categories

(Thunderbird :: Mail Window Front End, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3

People

(Reporter: kouk+Devel.Bugs, Assigned: mkmelin)

Details

Attachments

(2 files, 1 obsolete file)

User-Agent:       Mozilla/5.0 (compatible; Konqueror/3.5; GNU/kFreeBSD) KHTML/3.5.7 (like Gecko) (Debian)
Build Identifier: 2.0.0.0 (20070515)

Thunderbird responds to MDN requests without placing the proper full name in the From header of the responses. The full name that should accompany the email address in the from header should be the one that is configured in the account settings for that email address.

Reproducible: Always

Steps to Reproduce:
1. send a message to an address that you use Thunderbird to read and request a message disposition notification (MDN) for the message.
2. open up the message in Thunderbird
3. Thunderbird asks you through a popup wether to send the MDN response.
4. Click 'send'
Actual Results:  
The message arrives at the address that requested the MDN without the full name that was configured in Thunderbird for the receiving address.

Expected Results:  
The message should have arrived at the address that requested the MDN with the full name that was configured in Thunderbird for the receiving address.

This might seem minor, but on some systems where administrators have configured the MSA to check that the full name on the address is correct (to prevent misrepresentation), this bug results in annoyance or loss of functionality for users of those systems.
Was that for another identity? (If so, dupe of bug 256510)
Version: unspecified → 2.0
No, this doesn't involve identities but accounts (I have just one account with just one identity, the default identity). Bug 256510 is a separate bug but perhaps it is related.

In my case, since I only have one identity per account, the address used for the MDN response is correct (it's the address specified in the default identity). What is missing is the value "Your Name" in the Account/Identity settings (sometimes referred to as "personal comment" or "real name" etc.).
Yes, I see this...
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attached patch proposed fix (obsolete) — Splinter Review
This makes us use the full address as From.
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #273800 - Flags: superreview?(bienvenu)
Attachment #273800 - Flags: review?(bienvenu)
Comment on attachment 273800 [details] [diff] [review]
proposed fix

Thx for taking this on, Magnus. It basically looks good, but doesn't this leak fullAddress?
Attached patch proposed fix, v2Splinter Review
Using a nsCString instead...
Attachment #273800 - Attachment is obsolete: true
Attachment #273810 - Flags: superreview?(bienvenu)
Attachment #273810 - Flags: review?(bienvenu)
Attachment #273800 - Flags: superreview?(bienvenu)
Attachment #273800 - Flags: review?(bienvenu)
Comment on attachment 273810 [details] [diff] [review]
proposed fix, v2

thx, Magnus. Bonus points if you put this brace on a line by itself, or even better, get rid of the braces completely :-)

+    if (parser) {
+        // convert to UTF8 before passing to MakeFullAddress

if you move the comment line to above the if (parser) check, it looks nicer w/o the braces.
Attachment #273810 - Flags: superreview?(bienvenu)
Attachment #273810 - Flags: superreview+
Attachment #273810 - Flags: review?(bienvenu)
Attachment #273810 - Flags: review+
Fixed the braces. Looked a bit unclear without them at all...
Attachment #273810 - Attachment description: proposed additional fix, v2 → proposed fix, v2
Checking in mailnews/extensions/mdn/src/nsMsgMdnGenerator.cpp;
/cvsroot/mozilla/mailnews/extensions/mdn/src/nsMsgMdnGenerator.cpp,v  <--  nsMsgMdnGenerator.cpp
new revision: 1.26; previous revision: 1.25
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: