[Bug 386980] mdn responses are sent without the configured personal name for the account r+sr=bienvenu

NPOTB for the firefox freeze.